--- a/css/style.css
+++ b/css/style.css
@@ -425,82 +425,6 @@ header .fa-bars{
   font-size: 1.7rem;
   padding:1rem .1rem;
 }
-
-.contact .row{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.contact .row .contact-info .box{
-  margin:4rem 2rem;
-}
-
-.contact .row .contact-info .box h3{
-  font-size: 2rem;
-  color:#333;
-}
-
-.contact .row .contact-info .box h3 i{
-  color:#0098a1;
-}
-
-.contact .row .contact-info .box p{
-  padding-left: 3rem;
-  font-size: 1.7rem;
-  color:#aaa;
-}
-
-.contact .row .contact-form-container{
-  width:50%;
-}
-
-.contact .row .contact-form-container h3{
-  font-size: 4rem;
-  padding-top: 4rem;
-  color:#0098a1;
-} 
-
-.contact .row .contact-form-container .inputBox{
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.contact .row .contact-form-container .inputBox input{
-  width: 49%;
-}
-
-.contact .row .contact-form-container form input, textarea{
-  outline: none;
-  border:.2rem solid #0098a1;
-  height:4rem;
-  background:#fff;
-  padding:0 1rem;
-  margin:1rem 0;
-  font-size: 1.8rem;
-}
-
-.contact .row .contact-form-container form textarea{
-  width:100%;
-  padding:1rem;
-  resize: none;
-  height:20%;
-}
-
-.contact .row .contact-form-container form input[type="submit"]{
-  color:#0098a1;
-  border:.2rem solid #0098a1;
-  cursor: pointer;
-  transition: .2s;
-  width:20rem;
-}
-
-.contact .row .contact-form-container form input[type="submit"]:hover{
-  color:#fff;
-  background:#0098a1;
-}
-
 .newsletter{
   padding:2rem;
   background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)), url(../images/img5.jpg) no-repeat;
@@ -589,24 +513,6 @@ header .fa-bars{
 .footer .icons a:hover{
   background:#0098a1;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* media queries  */
 
@@ -745,5 +651,26 @@ header .fa-bars{
   .contact .row .contact-form-container form input[type="submit"]{
     width:100%;
   }
+
+}
+.destination{
+  width: 100%;
+  height: 300px;
+}
+.destination img{
+  position: absolute;
+  top:0; left:0;
+  height:350px;
+  width: 100%;
+  object-fit: cover;
+  z-index: -1;
+
+}
+.destination .content h1{
+  font-size: 3.1vw;
+  color:#fff;
+  text-shadow: 0 .3rem .5rem #000;
+  margin-top: 15rem;
+  text-align: center;
 
 }
