--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,7 @@ header .fa-bars{
 .feature{
   min-height:100vh;
   background:#f9f9f9;
+  margin-bottom: 100px;
 }
 
 .feature .card-container{
@@ -891,7 +892,7 @@ color: #0098a1;
   text-align: center;
   letter-spacing: 2;
 }
-h1{
+.top-sec h1{
   font-family: 'Charm', cursive;
   font-weight: bold;
   text-decoration: underline;
@@ -925,4 +926,93 @@ h1{
 }
 .btn-sec:hover{
   transform: scale(.8);
+}
+.top-sec{
+  margin-top: 200px;
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-bottom: 200px;
+}
+.se1{
+  margin-top: 200px;
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-bottom: 200px;
+
+}
+.pro-pagination-style a {
+  font-weight: 400;
+  color: #1d1d1d;
+  padding: 0;
+  height: 36px;
+  line-height: 36px;
+  background: #f6f6f6;
+  font-size: 14px;
+  display: inline-block;
+  width: 36px;
+  border-radius: 100%;
+  text-align: center;
+  vertical-align: top;
+  font-size: 14px;
+}
+.pro-pagination-style a.active {
+  color: #fff;
+  background-color: #266cfb;
+}
+.text-center {
+  text-align: center!important;
+}
+.pro-pagination-style ul{
+  display: inline-block;
+	list-style-type: none;
+}
+.pro-pagination-style ul li{
+  display: inline-block;
+	list-style-type: none;
+}
+.col-2{
+  padding-top: 50px;
+  flex-basis: 50%;
+  padding-left: 10px;
+  padding-right: 20px;
+}
+.col-2 img{
+   max-width: 100%;
+   height: 350px;
+   margin-left: 30px;
+}
+.row{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.col-2 h1{
+  color: black;
+  font-family: 'Open Sans', sans-serif;
+  letter-spacing: 0.09em;
+  font-size: 50px;
+}
+.col-2 p{
+  color: #4F4F4F;
+  line-height: 138.5%;
+  font-family: 'Open Sans', sans-serif;
+  letter-spacing: 0.08em;
+  font-size: 15px;
+}
+.small-container{
+  margin-bottom: 100px;
+}
+.col-2 h3{
+  color: #0098a1;
+  font-family: 'Open Sans', sans-serif;
+  letter-spacing: 0.09em;
+  font-size: 20px;
+}
+.col-2 h4{
+  font-size: 15px;
+
+}
+.col-2 h2{
+  color: red;
+  font-size: 25px;
 }
