--- a/css/style.css
+++ b/css/style.css
@@ -1016,3 +1016,106 @@ color: #0098a1;
   color: red;
   font-size: 25px;
 }
+.account-page{
+  padding: 50px 0;
+  background: #ffffff;
+  margin-top: 100px;
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-bottom: 100px;
+}
+
+.form-container2{
+  background: #ffffff;
+  width: 300px;
+  height: 400px;
+  position: relative;
+  text-align: center;
+  padding: 20px 0;
+  margin: auto;
+  box-shadow:  0 0 20px 0px rgba(0,0,0,0.3);
+  border-radius: 9px;
+  overflow: hidden;
+
+}
+
+.form-container2 span{
+  font-weight: bold;
+  padding:  0 10px;
+  color: #555555;
+  cursor: pointer;
+  width: 100px;
+  display: inline-block;
+}
+
+.form-btn{
+  display: inline-block;
+}
+
+.form-container2 form{
+  max-width: 300px;
+  padding: 0 20px;
+  position: absolute;
+  top: 130px;
+  transition: transform 1s;
+}
+
+.form-container2 form input{
+  width: 100%;
+  height: 30px;
+  margin: 10px 0;
+  padding: 0 10px;
+  border: 1px solid #cccccc;
+}
+
+.form-container2 form .btn{
+  width: 100%;
+  border: none;
+  cursor: pointer;
+  margin: 10px 0;
+}
+
+.form-container2 form .btn:focus{
+  outline: none;
+}
+
+
+#LoginForm{
+
+  left:-300px;
+}
+
+#RegForm{
+
+  left:0px;
+}
+
+.form-container2 form a{
+  font-size: 12px;
+}
+
+
+#Indicator{
+  width: 100px;
+  border: none;
+  background: coral;
+  height: 3px;
+  margin-top: 8px;
+  transform: translateX(100px);
+  transition: transform 1s;
+}
+.form-container2 .btn{
+  display: inline-block;
+  background: #0098a1;
+  color: white;
+  padding: 8px 30px;
+  margin: 30px 0;
+  border-radius: 30px;
+}
+
+.btn:hover{
+  background: rgba(160, 55, 55, 0.856);
+}
+.form-btn span{
+  font-size: 15px;
+}
